--- a/build.gradle
+++ b/build.gradle
@@ -30,13 +30,11 @@ repositories {
 
 dependencies {
     testImplementation(
-            'org.junit.jupiter:junit-jupiter-api:5.10.0',
-            'org.junit.jupiter:junit-jupiter-params:5.10.0',
+            'org.junit.jupiter:junit-jupiter:5.10.0',
             'com.codeborne:selenide:7.6.0',
             'io.qameta.allure:allure-selenide:2.29.0',
-            'org.aspectj:aspectjweaver:1.9.21',
-            'com.github.javafaker:javafaker:1.0.2',
-            'ch.qos.logback:logback-classic:1.4.11'
+            'org.aspectj:aspectjweaver:1.9.21'
+
     )
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
 }
@@ -54,11 +52,7 @@ tasks.withType(Test) {
     }
 }
 
-task znak_test(type: Test) {
-    useJUnitPlatform {
-        includeTags("znak")
-    }
 
-}
+
 
 
